namespace GameLogic {
    public interface IDestroyable {
        void Destroy();
    }
}
