using System.Numerics;

namespace GameLogic {
    public interface IForwardProvider {
        Vector2 Forward { get; }
    }
}
