using System.Numerics;

namespace GameLogic {
    public interface IPositionProvider {
        Vector2 Position { get; set; }
    }
}
