namespace GameLogic {
    public interface IPositionVelocityProvider : IPositionProvider, IVelocityProvider { }
}
