namespace GameLogic {
    public interface IRotationProvider {
        float Rotation { get; set; }
    }
}
