using System.Numerics;

namespace GameLogic {
    public interface IScaleProvider {
        Vector2 Scale { get; set; }
    }
}
