using System.Numerics;

namespace GameLogic {
    public interface ISizeProvider {
        Vector2 Size { get; }
    }
}
