namespace GameLogic {
    public interface ISizedTransformProvider : ITransformProvider, ISizeProvider { }
}
