namespace GameLogic {
    public interface ITransformProvider : IPositionProvider, IRotationProvider, IScaleProvider, IForwardProvider { }
}
