using System.Numerics;

namespace GameLogic {
    public interface IVelocityProvider {
        Vector2 Velocity { get; set; }
    }
}
